# pg-walstream

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LOAD_TEST_COMPARISON.md  Makefile  README.md  SECURITY.md  _typos.toml  codecov.yml
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/publish-crate/: action.yml
.github/workflows/: auto-tag.yml  benchmarks.yml  ci-checks.yml  ci.yml  codspeed.yml  fuzz.yml  publish-crate.yml  quality.yml  release.yml
benches/: columnvalue_vs_json.rs  deserialize.rs  rowdata_vs_hashmap.rs  wal_pipeline.rs
examples/: README.md  basic_streaming.rs  pg_basebackup.rs  polling_example.rs  rate_limited_streaming.rs  safe_transaction_consumer.rs
examples/arbitrary-fuzzing/: Cargo.toml
examples/arbitrary-fuzzing/src/: lib.rs  main.rs
examples/basic-streaming/: Cargo.toml
examples/basic-streaming/src/: main.rs
examples/binary-column-access/: Cargo.toml
examples/binary-column-access/src/: main.rs
examples/derive-router/: Cargo.toml
examples/derive-router/src/: main.rs
examples/pg-basebackup/: Cargo.toml
examples/pg-basebackup/config/: pg_hba.conf  postgresql.conf
examples/pg-basebackup/src/: backup_flow.rs  main.rs
examples/pg_basebackup/: backup_flow.rs  tar.rs
examples/polling/: Cargo.toml
examples/polling/src/: main.rs
examples/rate-limited-streaming/: Cargo.toml
examples/rate-limited-streaming/src/: main.rs
examples/raw-xlogdata/: Cargo.toml
examples/raw-xlogdata/src/: main.rs
examples/safe-transaction-consumer/: Cargo.toml
examples/safe-transaction-consumer/src/: main.rs
examples/tokio-spawn-streaming/: Cargo.toml
examples/tokio-spawn-streaming/src/: main.rs
examples/typed-deserialization/: Cargo.toml  README.md
examples/typed-deserialization/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: roundtrip_bytes.rs  roundtrip_message.rs  roundtrip_stream.rs
integration-tests/: base_backup_options.rs  binary_columns.rs  bounded_replay.rs  complex_types.rs  ergonomics.rs  failover_slot.rs  pg_result_get_bytes.rs  pgoutput_fidelity.rs  quote_literal_scs_off.rs  rate_limited_streaming.rs  raw_xlogdata.rs  safe_transaction_consumer.rs  slot_matrix.rs  snapshot_export.rs  ssl_connections.rs  streaming_decode.rs  typed_deserialization.rs  version_preflight.rs
load-tests/: Cargo.toml  run-loadtest.sh
load-tests/fixtures/: test_ca.pem
load-tests/src/: consumer.rs  generator.rs  json_types.rs  lib.rs  main.rs  main.rs.bak  metrics.rs  reporter.rs  sampler.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: buffer.rs  column_value.rs  connection.rs  deserializer.rs  error.rs  handler.rs  lib.rs  lsn.rs  protocol.rs  retry.rs  router.rs  sql_builder.rs  stream.rs  types.rs
src/connection/: libpq.rs  mod.rs
src/connection/native/: auth.rs  certs.rs  connection.rs  conninfo.rs  copy.rs  error.rs  md5.rs  mod.rs  query.rs  result.rs  startup.rs  wire.rs
src/pgoutput_encode/: base.rs  mod.rs  roundtrip_tests.rs  streaming.rs  two_phase.rs  v1.rs  wire.rs
tests/: rate_limited_streaming.rs  safe_transaction_consumer.rs  snapshot_export.rs
tools/arbitrary-fuzzing/: Cargo.toml
tools/arbitrary-fuzzing/src/: main.rs
