[package]
name = "pg_walstream"
version = "0.5.1"
edition = "2021"
authors = ["danielshih <dog830228@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/isdaniel/pg-walstream"
homepage = "https://github.com/isdaniel/pg-walstream"
documentation = "https://docs.rs/pg_walstream"
readme = "README.md"
description = "PostgreSQL logical replication protocol library - parse and handle PostgreSQL WAL streaming messages"
keywords = ["postgresql", "replication", "wal", "logical-decoding", "streaming"]
categories = ["database", "parsing", "network-programming"]

[dependencies]
tokio = { version = "1.51.1", features = ["io-util", "net", "time", "macros", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.18", features = ["compat"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
chrono = { version = "0.4.44", features = ["serde"] }
bytes = { version = "1.11.1", features = ["serde"] }
tracing = "0.1.44"
thiserror = "2.0.18"
futures-core = "0.3.32"
pin-project-lite = "0.2.17"

# libpq backend (default)
libpq-sys = { version = "0.8", optional = true }

# rustls-tls
tokio-rustls = { version = "0.26.4", optional = true }
rustls = { version = "0.23.37", default-features = false, features = ["std", "tls12"], optional = true }
webpki-roots = { version = "1.0.6", optional = true }
postgres-protocol = { version = "0.6.11", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
rustls-native-certs = { version = "0.8.3", optional = true }
md-5 = { version = "0.11.0", optional = true }
aws-lc-rs = { version = "1.16.2", optional = true }
socket2 = { version = "0.6.3", features = ["all"], optional = true }
memchr = "2.8.0"

[features]
default = ["libpq"]
libpq = ["dep:libpq-sys"]

# Pure-Rust native backend: uses rustls with aws-lc-rs forhardware-accelerated TLS crypto (AES-NI, AVX2, SHA-NI), requires cmake + C compiler at build time.
rustls-tls = [
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:webpki-roots",
    "dep:postgres-protocol",
    "dep:rustls-pemfile",
    "dep:rustls-native-certs",
    "dep:md-5",
    "dep:aws-lc-rs",
    "dep:socket2",
    "rustls/aws_lc_rs",
]

[dev-dependencies]
tokio = { version = "1.51.1", features = ["full"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
futures = "0.3.32"

[[test]]
name = "snapshot_export"
path = "integration-tests/snapshot_export.rs"

[[test]]
name = "rate_limited_streaming"
path = "integration-tests/rate_limited_streaming.rs"

[[test]]
name = "safe_transaction_consumer"
path = "integration-tests/safe_transaction_consumer.rs"

[[test]]
name = "complex_types"
path = "integration-tests/complex_types.rs"

[[bench]]
name = "wal_pipeline"
harness = false
