[package]
name = "pg_walstream"
version = "0.6.3"
edition = "2021"
authors = ["danielshih <dog830228@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/isdaniel/pg-walstream"
homepage = "https://github.com/isdaniel/pg-walstream"
documentation = "https://docs.rs/pg_walstream"
readme = "README.md"
description = "PostgreSQL logical replication protocol library - parse and handle PostgreSQL WAL streaming messages"
keywords = ["postgresql", "replication", "wal", "logical-decoding", "streaming"]
categories = ["database", "parsing", "network-programming", "no-std"]

[dependencies]
tokio = { version = "1.52.3", features = ["io-util", "net", "time", "macros", "rt", "rt-multi-thread"], optional = true }
tokio-util = { version = "0.7.18", optional = true }
serde = { version = "1.0.228", default-features = false, features = ["derive", "rc", "alloc"] }
chrono = { version = "0.4.45", default-features = false, features = ["serde", "alloc"] }
bytes = { version = "1.12.0", default-features = false, features = ["serde"] }
tracing = { version = "0.1.44", default-features = false }
futures-core = { version = "0.3.32", default-features = false }
memchr = { version = "2.8.2", default-features = false }
smallvec = { version = "1.15.2", features = ["serde"] }

# libpq backend (default)
libpq-sys = { version = "0.8", optional = true }

# rustls-tls
tokio-rustls = { version = "0.26.4", optional = true }
rustls = { version = "0.23.41", default-features = false, features = ["std", "tls12"], optional = true }
webpki-roots = { version = "1.0.8", optional = true }
postgres-protocol = { version = "0.6.12", optional = true }
aws-lc-rs = { version = "1.17.0", optional = true }
socket2 = { version = "0.6.4", features = ["all"], optional = true }

[features]
default = ["std", "libpq"]

# Standard library support, on by default. Disable with `--no-default-features`
# for a no_std + alloc parser-only build (targets wasm and embedded).
std = [
    "serde/std",
    "chrono/std",
    "chrono/clock",
    "bytes/std",
    "tracing/std",
    "futures-core/std",
    "memchr/std",
]

libpq = ["dep:libpq-sys", "dep:tokio", "dep:tokio-util", "std"]

# Pure-Rust native backend: uses rustls with aws-lc-rs forhardware-accelerated TLS crypto (AES-NI, AVX2, SHA-NI), requires cmake + C compiler at build time.
rustls-tls = [
    "dep:tokio",
    "dep:tokio-util",
    "dep:tokio-rustls",
    "dep:rustls",
    "dep:webpki-roots",
    "dep:postgres-protocol",
    "dep:aws-lc-rs",
    "dep:socket2",
    "rustls/aws_lc_rs",
    "std",
]

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }
criterion = { version = "0.8.2", features = ["html_reports"] }
futures = "0.3.32"
serde_bytes = "0.11.19"
proptest = "1.11"
serde_json = "1.0.150"

[[test]]
name = "snapshot_export"
path = "integration-tests/snapshot_export.rs"

[[test]]
name = "rate_limited_streaming"
path = "integration-tests/rate_limited_streaming.rs"

[[test]]
name = "safe_transaction_consumer"
path = "integration-tests/safe_transaction_consumer.rs"

[[test]]
name = "complex_types"
path = "integration-tests/complex_types.rs"

[[test]]
name = "typed_deserialization"
path = "integration-tests/typed_deserialization.rs"

[[test]]
name = "ssl_connections"
path = "integration-tests/ssl_connections.rs"

[[test]]
name = "pgoutput_fidelity"
path = "integration-tests/pgoutput_fidelity.rs"

[[test]]
name = "streaming_decode"
path = "integration-tests/streaming_decode.rs"

[[bench]]
name = "wal_pipeline"
harness = false
