[package]
name = "pg-walstream-loadtest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "pg_walstream_loadtest"
path = "src/lib.rs"

[[bin]]
name = "pg-walstream-loadtest"
path = "src/main.rs"

[[bin]]
name = "pg-walstream-generator"
path = "src/bin/generator.rs"

[[bin]]
name = "pg-walstream-compare"
path = "src/bin/compare.rs"

[features]
default = ["libpq"]
libpq = ["pg_walstream/libpq"]
rustls-tls = ["pg_walstream/rustls-tls", "dep:rustls"]

[dependencies]
pg_walstream = { path = ".." }
rustls = { version = "0.23.38", default-features = false, features = ["aws_lc_rs"], optional = true }
tokio = { version = "1.52.1", features = ["full"] }
tokio-postgres = "0.7.17"
postgres-openssl = "0.5.3"
openssl = "0.10.76"
hdrhistogram = "7.5.4"
chrono = "0.4.44"
rand = "0.8.5"
sysinfo = "0.38.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
futures-core = "0.3.32"
bytes = "1.11.1"
futures = "0.3.32"
