[package]
name = "pg-basebackup"
version = "0.1.0"
edition = "2021"
publish = false
description = "PostgreSQL Base Backup example using the replication protocol"

[dependencies]
pg_walstream = { path = "../.." }
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.47.2", features = ["full"] }
flate2 = "1.1.9"