[package]
name = "rate-limited-streaming"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rate-limited PostgreSQL WAL streaming example with futures::Stream"

[dependencies]
pg_walstream = { path = "../.." }
futures = "0.3.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.47.2", features = ["full"] }